trying to fix zoom problem on mobile

--- a/src/components/PageContainer/PageContainer.styles.css
+++ b/src/components/PageContainer/PageContainer.styles.css
@@ -7,7 +7,7 @@
     display: flex;
     flex-direction: column;
     width: 100vw;
-    min-height: calc(100vh - var(--header-mobile-height));
+    min-height: var(--content-full-page);
     margin-top: var(--header-mobile-height);
   }
 }
