--- a/src/pages/CheatSheets/Css/Flexbox/FlexboxCheatSheet.styles.css
+++ b/src/pages/CheatSheets/Css/Flexbox/FlexboxCheatSheet.styles.css
@@ -51,7 +51,7 @@
     align-content: center;
     align-items: center;
     justify-content: center;
-    min-height: calc(
+    height: calc(
       var(--content-full-page) - var(--title-mobile-height) -
         var(--button-actionable-mobile-height) * 2 - 1.2rem - 0.25rem
     );
